third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/inline-table/overwrite-07.stderr
TOML parse error at line 1, column 8
  |
1 | tab = { inner.table = [{}], inner.table.val = "bad" }
  |        ^
dotted key `inner.table` attempted to extend non-table type (array)
